{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 306,
  "lineage": "1e55ca60-3934-b662-da61-89c63494555d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-instance_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-022e8cc8f0d3c52fd",
            "arn": "arn:aws:ec2:eu-west-1:396970181948:instance/i-0e399555defab9877",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e399555defab9877",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testing",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07af0600e6cc7cd0f",
            "private_dns": "ip-10-1-2-229.eu-west-1.compute.internal",
            "private_ip": "10.1.2.229",
            "public_dns": "ec2-3-249-45-9.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.249.45.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0016c283abb69b57d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09224e3245aadb769",
            "tags": {
              "Environment": "Production"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03bd28ebd04d4cf64"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_22",
            "aws_subnet.subnet_public_one",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-instance_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-022e8cc8f0d3c52fd",
            "arn": "arn:aws:ec2:eu-west-1:396970181948:instance/i-02262dd5e6d3aabf2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02262dd5e6d3aabf2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testing",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0102ffd5d5fb7e1fe",
            "private_dns": "ip-10-1-3-29.eu-west-1.compute.internal",
            "private_ip": "10.1.3.29",
            "public_dns": "ec2-54-217-171-250.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.217.171.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e18575049915e5aa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-022111abad2096586",
            "tags": {
              "Environment": "Production"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03bd28ebd04d4cf64"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_22",
            "aws_subnet.subnet_public_two",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:396970181948:internet-gateway/igw-0242b930f01568ab0",
            "id": "igw-0242b930f01568ab0",
            "owner_id": "396970181948",
            "tags": {
              "Environment": "Production"
            },
            "vpc_id": "vpc-02af5452f247c06cb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:396970181948:loadbalancer/app/test-lb-tf/6d0783c4a79b94df",
            "arn_suffix": "app/test-lb-tf/6d0783c4a79b94df",
            "dns_name": "internal-test-lb-tf-131683683.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:396970181948:loadbalancer/app/test-lb-tf/6d0783c4a79b94df",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-03bd28ebd04d4cf64"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-022111abad2096586"
              },
              {
                "subnet_id": "subnet-09224e3245aadb769"
              }
            ],
            "subnets": [
              "subnet-022111abad2096586",
              "subnet-09224e3245aadb769"
            ],
            "tags": {
              "Environment": "Production"
            },
            "vpc_id": "vpc-02af5452f247c06cb",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.sg_22",
            "aws_subnet.subnet_public_one",
            "aws_subnet.subnet_public_two",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:396970181948:listener/app/test-lb-tf/6d0783c4a79b94df/a27de6078e1435b8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:396970181948:targetgroup/tf-example-lb-tg/108a69c02a637272",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:396970181948:listener/app/test-lb-tf/6d0783c4a79b94df/a27de6078e1435b8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:396970181948:loadbalancer/app/test-lb-tf/6d0783c4a79b94df",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.test",
            "aws_lb_target_group.test",
            "aws_security_group.sg_22",
            "aws_subnet.subnet_public_one",
            "aws_subnet.subnet_public_two",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:396970181948:targetgroup/tf-example-lb-tg/108a69c02a637272",
            "arn_suffix": "targetgroup/tf-example-lb-tg/108a69c02a637272",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:396970181948:targetgroup/tf-example-lb-tg/108a69c02a637272",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02af5452f247c06cb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05e4cb6a6d1703f06",
            "owner_id": "396970181948",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0242b930f01568ab0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production"
            },
            "vpc_id": "vpc-02af5452f247c06cb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e3a8f9d8b734022",
            "route_table_id": "rtb-05e4cb6a6d1703f06",
            "subnet_id": "subnet-09224e3245aadb769"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb_public",
            "aws_subnet.subnet_public_one",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08811a93eb0ac5013",
            "route_table_id": "rtb-05e4cb6a6d1703f06",
            "subnet_id": "subnet-022111abad2096586"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb_public",
            "aws_subnet.subnet_public_two",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:396970181948:security-group/sg-03bd28ebd04d4cf64",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03bd28ebd04d4cf64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from any IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_22",
            "name_prefix": "",
            "owner_id": "396970181948",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production"
            },
            "timeouts": null,
            "vpc_id": "vpc-02af5452f247c06cb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:396970181948:subnet/subnet-09224e3245aadb769",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-09224e3245aadb769",
            "map_public_ip_on_launch": true,
            "owner_id": "396970181948",
            "tags": {
              "Environment": "Production",
              "Type": "Public"
            },
            "vpc_id": "vpc-02af5452f247c06cb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:396970181948:subnet/subnet-022111abad2096586",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-022111abad2096586",
            "map_public_ip_on_launch": true,
            "owner_id": "396970181948",
            "tags": {
              "Environment": "Production",
              "Type": "Public"
            },
            "vpc_id": "vpc-02af5452f247c06cb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:396970181948:vpc/vpc-02af5452f247c06cb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0c19cbc8b403f11ad",
            "default_route_table_id": "rtb-08a666a7854e60066",
            "default_security_group_id": "sg-04c0f004678a2f118",
            "dhcp_options_id": "dopt-6e949a08",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02af5452f247c06cb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08a666a7854e60066",
            "owner_id": "396970181948",
            "tags": {
              "Environment": "Production"
            }
          }
        }
      ]
    }
  ]
}